# XCVarioPure

./: .clang-format  .clangd  .gitignore  README.md  README.txt  analyze_core  sdkconfig.defaults
components/util/: CMakeLists.txt
components/util/math/: Integers.cpp  Quaternion.cpp  Quaternion.h  Trigonometry.cpp  Trigonometry.h  Units.cpp  Units.h  fast_math_cstub.h  vector_3d.cpp  vector_3d.h  vector_3d_fwd.h
main/: AdaptUGC.cpp  AdaptUGC.h  Atmosphere.cpp  Atmosphere.h  AverageVario.cpp  AverageVario.h  BMPVario.cpp  CMakeLists.txt  CenterAid.cpp  CenterAid.h  Cipher.cpp  Colors.h  Compass.cpp  Compass.h  ESP32NVS.cpp  ESPAudio.cpp  ESPAudio.h  ESPRotary.cpp  Flap.cpp  Flap.h  Flarm.cpp  Flarm.h  IpsDisplay.cpp  IpsDisplay.h  KalmanMPU6050.cpp  LeakTest.cpp  S2F.cpp  S2F.h  S2fSwitch.cpp  S2fSwitch.h  Webserver.cpp  logdef.h  logdefnone.h  sensor.cpp  sensor.h  vector.cpp  vector.h  version.h.in
main/comm/: BTnus.cpp  CanBus.cpp  CanBus.h  Configuration.h  DataLink.cpp  DeviceMgr.cpp  DeviceMgr.h  Devices.h  InterfaceCtrl.h  OneWireBus.cpp  OneWireBus.h  SerialLine.cpp  WifiApSta.cpp  WifiApSta.h
main/driver/: CMakeLists.txt
main/driver/audio/: ESPAudio.cpp  ESPAudio.h  Poti.cpp  Poti.h  cat5171.cpp  cat5171.h  mcp4018.cpp  mcp4018.h
main/driver/gpio/: AnalogInput.cpp  AnalogInput.h  ESPRotary.cpp  ESPRotary.h  S2fSwitch.cpp  S2fSwitch.h
main/driver/time/: AliveMonitor.h  Clock.cpp  Clock.h  WatchDog.cpp  WatchDog.h
main/driver/web_ota/: OTA.cpp  OTA.h  Webserver.cpp  Webserver.h  dpp_ota.cpp  dpp_ota.h
main/math/: Integers.h  Quaternion.cpp  Quaternion.h  Trigonometry.cpp  Trigonometry.h  Units.cpp  Units.h  vector_3d.cpp  vector_3d.h
main/protocol/: ATR833Remote.cpp  Anemoi.cpp  Clock.cpp  Clock.h  FlarmSim.cpp  FlarmSim.h  KRT2Remote.cpp  MagSensBin.cpp  MagSensBin.h  NMEA.cpp  NMEA.h  TestQuery.cpp  TestQuery.h
main/protocol/nmea/: BorgeltMsg.cpp  CANClientQueryMsg.cpp  CANClientQueryMsg.h  CANMasterRegMsg.cpp  CANMasterRegMsg.h  CambridgeMsg.cpp  FlarmHostMsg.cpp  FlarmMsg.cpp  GarminMsg.cpp  GpsMsg.cpp  JumboCmdMsg.cpp  MagSensMsg.cpp  OpenVarioMsg.cpp  SeeYouMsg.cpp  XCNavMsg.cpp  XCVSimMsg.cpp  XCVSimMsg.h  XCVSyncMsg.cpp  XCVarioMsg.cpp
main/screen/: BootUpScreen.cpp  BootUpScreen.h  CMakeLists.txt  DrawDisplay.cpp  DrawDisplay.h  FlarmScreen.cpp  FlarmScreen.h  HorizonPage.cpp  MessageBox.cpp  MessageBox.h  ScreenRoot.cpp  ScreenRoot.h  SetupRoot.cpp  SetupRoot.h  UiEvents.h
main/screen/element/: Altimeter.cpp  Altimeter.h  (+27 more)
main/sensor/: CMakeLists.txt  Filters.cpp  Filters.h  SensorBase.cpp  SensorBase.h  SensorMgr.cpp  SensorMgr.h  VarioFilter.cpp  VarioFilter.h
main/setup/: CompassMenu.cpp  CompassMenu.h  CruiseMode.cpp  CruiseMode.h  DataMonitor.cpp  DisplayDeviations.cpp  ImuStatus.cpp  ImuStatus.h  MainMenu.cpp  MainMenu.h  MenuEntry.cpp  MenuEntry.h  SetupAction.cpp  SetupAction.h  SetupCommon.cpp  SetupCommon.h  SetupMenu.cpp  SetupMenu.h  SetupMenuChar.cpp  SetupMenuChar.h  SetupMenuDisplay.cpp  SetupMenuSelect.cpp  SetupMenuSelect.h  SetupMenuValFloat.cpp  SetupMenuValFloat.h  SetupNG.cpp  SetupNG.h  ShowCirclingWind.cpp  ShowCompassSettings.cpp  ShowFlightInfo.cpp  ShowFlightInfo.h  ShowStraightWind.cpp  SubMenuAudio.cpp  SubMenuAudio.h  SubMenuCompassWind.cpp  SubMenuCompassWind.h  SubMenuDevices.cpp  SubMenuFlap.cpp  SubMenuGlider.cpp  SubMenuImu.cpp  (+1 more)
main/test/: LeakTest.cpp  LeakTest.h
main/wind/: CircleWind.cpp  CircleWind.h  StraightWind.cpp  StraightWind.h  Wind.h  WindCalcTask.cpp
(+77 files in other folders)
